# SeQuantial

./: README.md  changelog.md  pyproject.toml
src/: main.py
src/attributes/: commands.py  parameters.py
src/operations/: randomiser.py  randomiser2.py  reference.py  synthetic.py
src/sequantial/: logfile.py
tests/: test_setup.py
