[tool.poetry]
name = "sequantial"
version = "0.1.0"
description = "syntehtic sequence generator"
authors = ["Mike Brown"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
logging = "^0.4.9.6"
tqdm = "^4.66.5"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
